# witness-trainer

./: CMakeLists.txt  asm_listing_to_commentated_array.py  detour.asm
source/: CMakeLists.txt  aob.cpp  aob.hpp  defer.hpp  foreign_process_memory.cpp  foreign_process_memory.hpp  game_interface.cpp  game_interface.hpp  main.cpp
source/ui/: label.cpp  label.hpp
